k8s/deploy.yaml
# Kubernetes Deployment Manifest for Laravel Application

# Create namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ns

---
# Application Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns
  name: app-deployment
  labels:
    app: laravel-app
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
        - name: laravel-app
          image: aisuvro/k8s-ramadan:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: app-port
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"

---
# NGINX Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns
  name: nginx-deployment
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
       app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
            - name: public-volume
              mountPath: /var/www/html/public
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: public-volume
          emptyDir: {}

---
# Service for Laravel application
apiVersion: v1
kind: Service
metadata:
  namespace: ns
  name: app-service
  labels:
    app: laravel-app
spec:
  type: ClusterIP
  selector:
    app: laravel-app
  ports:
    - port: 9000
      targetPort: app-port

---
# Service for NGINX
apiVersion: v1
kind: Service
metadata:
  namespace: ns
  name: nginx-service
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: http
      nodePort: 30000

---
# Ingress resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-app.local
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
